Styling fixes, clean up, input now clears when todo item is created, 'Clear completed' text is no longer visible when there are no completed todo items and X/Cross only appears when a todo item is hovered.

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .App__Content {
     display: flex;
     flex-direction: column;
-    max-width: 500px;
+    min-width: 550px;
 }
 
 .App__Heading {
